# tennis_as_a_markov_chain

./: .gitignore  .pre-commit-config.yaml  README.md  game_set_match.py  main.py  pyproject.toml  theory.md
src/: main.py
src/tennis_markov/: helpers.py
